# eminor2

./: .gitattributes  .gitignore  README.md  go.mod  go.sum
v2/controller/: CMakeLists.txt  DG Acoustic.syx  DG Drive.syx  DG One in Ten IIC++ v5 default.syx  DG One in Ten IIC++ v5 puppets.syx  DG One in Ten IIC++ v5 rotary.syx  DG One in Ten IIC++ v5.syx  DG One in Ten IIC++ v6 default.syx  DG One in Ten IIC++ v6 puppets.syx  DG One in Ten IIC++ v6 rotary.syx  DG One in Ten IIC++.syx  DG One in Ten.syx  DG Puppets IIC++.syx  DG Puppets.syx  King Nothing preamp.syx  King Nothing.syx  Makefile  test-compile.sh  v7 default.syx  v7 puppets.syx  v7 rotary.syx  v8 default.syx  v8 puppets.syx  v8 rotary.syx
v2/controller/PIC/: .map  18f4550 pragma config.txt  18f4550.lkr  BootPIC18NonJ.h  BootUserStartup.c  MidiComm.c  UserAppCode.c  _TOOLS.H  assert.h  boot.h  bootcode.c  c_cnstdef.h  c_portdef.h  c_ramdef.h  c_system.h  comm_lcd.c  comm_midi.c  config.asm  config.lst  custom.hot  default-buttons-high.sbs  eeprom.c  flash_bank0.h  flash_bank1.h  flash_bank2.h  flash_rom_init.h  flash_v1_bank0.h  flash_v1_bank1.h  flash_v2_bank0.h  flash_v2_bank2.h  flash_v3_bank0.h  flash_v3_bank2.h  flash_v4_bank0.h  flash_v4_bank2.h  flash_v5_bank0.h  flash_v5_bank1.h  flash_v5_bank2.h  flash_v6.h  flash_v6_bank0.h  flash_v6_bank1.h  (+35 more)
v2/controller/PIC programmer/: JamesDunne-usb-lab-bootloader.url  backup-2015-06-01.hex  backup-2015-06-24.hex  backup-2015-10-22.hex  backup-2015-11-06.hex  backup-2015-12-19.hex  backup-2016-01-20.hex  backup-2016-02-12.hex  backup-2016-03-09.hex  backup-2016-11-23.hex  backup-2017-07-31.hex  usbpicprog » Download.webloc
(+383 files in other folders)
